# 2468-TestCTestErrorReportingWithSuperbuild

./: Bar.cxx  Bar.h  CMakeLists.txt  Foo.cxx  Iton.cxx  Iton.h  PatchedCTest.cmake  dashboardscript.cmake
A/: A.cxx  A.h  A1.cxx  A1.h  A2.cxx  A2.h  CMakeLists.txt
B/: B.cxx  B.h  CMakeLists.txt
